--- a/app/views/default.html
+++ b/app/views/default.html
@@ -22,13 +22,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Core Style -->
-    <link rel="stylesheet" href="/assets/route/default/core/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/route/default/core/css/LineIcons.3.0.css">
     <link rel="stylesheet" href="/assets/route/default/core/css/animate.css">
     <!-- <link rel="stylesheet" href="/assets/route/default/core/css/tiny-slider.css"> -->
     <!-- <link rel="stylesheet" href="/assets/route/default/core/css/glightbox.min.css"> -->
     <link rel="stylesheet" href="/assets/route/default/core/css/main.css?v=171123">
-    <link rel="stylesheet" href="/assets/route/default/core/css/default.css?v=031223">
+    <link rel="stylesheet" href="/assets/route/default/core/css/default.css?v=220124">
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
 </head>
@@ -218,7 +218,7 @@
     <?php } ?>
     <!-- Vendor Script -->
     <script src="/vendors/jquery/dist/jquery.min.js"></script>
-    <script src="/assets/route/default/core/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/route/default/core/js/wow.min.js"></script>
     <!-- <script src="/assets/route/default/core/js/tiny-slider.js"></script> -->
     <!-- <script src="/assets/route/default/core/js/glightbox.min.js"></script> -->
