--- a/public/assets/main/css/utility.css
+++ b/public/assets/main/css/utility.css
@@ -89,6 +89,16 @@
     transform: none !important;
 }
 
+.modal .modal-dialog:not(.fullscreen) .modal-content > div:first-child {
+    border-top-left-radius: .4375rem;
+    border-top-right-radius: .4375rem;
+}
+
+.modal .modal-dialog:not(.fullscreen) .modal-content>div:last-child {
+    border-bottom-left-radius: .4375rem;
+    border-bottom-right-radius: .4375rem;
+}
+
 .modal .modal-dialog.fullscreen {
     width: 100%;
     max-width: none;
@@ -99,6 +109,10 @@
     min-height: 100vh;
     border: 0;
     border-radius: 0;
+}
+
+.modal .modal-dialog.fullscreen .modal-content>div {
+    border-radius: inherit;
 }
 
 .modal:not(.show) .modal-dialog.fullscreen .modal-content.scaleIn>* {
@@ -127,6 +141,12 @@
 .form-label-group textarea::placeholder,
 .form-label-group input::placeholder {
     color: transparent !important;
+}
+
+.form-label-group input,
+.form-label-group textarea {
+    padding-left: 1.4rem;
+    padding-right: 1.4rem;
 }
 
 .form-label-group label {
@@ -172,6 +192,22 @@
     top: 0px;
 }
 
+.form-label-group input[name="search"]~label::before {
+    content: 'Cari Data ...';
+    width: auto;
+    height: 100%;
+    display: block;
+    position: relative;
+}
+
+.form-label-group input[name="search"]:not(:placeholder-shown)~label::before {
+    content: 'Cari Data Berdasarkan';
+}
+
+.form-label-group input:placeholder-shown~span.input-char-left {
+    visibility: hidden;
+}
+
 .form-label-group.bg-transparent label,
 .form-label-group.bg-transparent textarea {
     background-color: inherit;
@@ -202,25 +238,29 @@
     background: linear-gradient(to bottom, transparent, #fff);
 }
 
-/* loader-animation */
-.loader-animation::after {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    content: 'Sedang memuat data';
-    width: 200px;
-    height: auto;
-    display: grid;
-    place-items: center;
-    font-size: 1em;
-    font-weight: 800;
-    background-color: var(--orange);
-    color: white;
-    padding: .5em;
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
+.hidden-area-utility.light::before {
+    background: linear-gradient(to bottom, transparent, #f8f9fa);
+}
+
+@media (max-width: 426px) {
+    .form-label-group input[name="search"]:placeholder-shown:not(:focus) {
+        width: calc(1.5em + 1.25rem + 5px);
+    }
+
+    .form-label-group input[name="search"]:placeholder-shown:not(:focus)~label {
+        opacity: 1;
+    }
+
+    .form-label-group input[name="search"]:placeholder-shown:not(:focus)~label::before {
+        content: '\f002';
+        font-family: "Font Awesome 5 Free";
+        font-size: 1.5rem;
+        display: flex;
+        align-self: center;
+        left: -.35rem;
+        top: -.4rem;
+        color: var(--primary);
+    }
 }
 
 @media (min-width: 425px) {
