--- a/public/assets/pojok-berbagi-style.css
+++ b/public/assets/pojok-berbagi-style.css
@@ -30,6 +30,7 @@ i.bi {
     justify-content: center;
 }
 
+.btn-outline-green-reverse,
 .button.donasi,
 .button.button-outline-green:hover,
 .btn.donasi,
@@ -43,8 +44,8 @@ i.bi {
 .button.button-outline-orange:hover,
 .btn.donasi:hover,
 .btn.btn-outline-orange:hover {
-    background-color: var(--orange);
-    color: #fff;
+    background-color: var(--orange) !important;
+    color: #fff !important;
 }
 
 .button.donasi:hover,
@@ -55,6 +56,7 @@ i.bi {
     color: #fff;
 }
 
+.btn-outline-green-reverse:hover,
 .button.button-outline-green,
 .btn.btn-outline-green {
     background-color: white;
@@ -66,8 +68,8 @@ i.bi {
 .btn-outline-orange-reverse:hover,
 .button.button-outline-orange,
 .btn.btn-outline-orange {
-    background-color: white;
-    color: var(--orange);
+    background-color: white !important;
+    color: var(--orange) !important;
     border: 1px solid var(--orange);
     transition: all .3s ease-in-out !important;
 }
@@ -180,6 +182,14 @@ img {
     margin: 0 auto;
 }
 
+.avatar img {
+    position: unset;
+}
+
+.avatar {
+    position: relative;
+}
+
 img::before {
     position: absolute;
     content: "";
@@ -190,13 +200,20 @@ img::before {
     display: flex;
     justify-content: center;
     align-items: center;
+    top: 0;
+    bottom: 0;
 }
 
+.load .avatar,
 .load img,
 .load img::before {
     background: linear-gradient(-90deg, #eee, #ddd, #ddd, #eee);
     background-size: 400% 400%;
     animation: gradient-load 1s ease infinite;
+}
+
+.load .avatar img {
+    visibility: hidden;
 }
 
 img::after {
@@ -275,6 +292,10 @@ textarea {
     border-radius: 0 inherit 0 0 !important;
 }
 
+*:not(textarea):not(body):not(html).modal::-webkit-scrollbar-track {
+    background-color: #5e72e4 !important;
+}
+
 *:not(textarea):not(body):not(html)::-webkit-scrollbar-thumb,
 :not(.form-floating.input_textarea2.touch) textarea::-webkit-scrollbar-thumb,
 .form-floating:not(.touch) textarea::-webkit-scrollbar-thumb {
@@ -282,6 +303,10 @@ textarea {
     border: 6px solid transparent !important;
     background-clip: content-box !important;
     background-color: #6c757d70 !important;
+}
+
+*:not(textarea):not(body):not(html).modal::-webkit-scrollbar-thumb {
+    background-color: white !important;
 }
 
 *:not(textarea):not(body):not(html)::-webkit-scrollbar-thumb:hover,
