--- a/public/assets/route/admin/core/css/form-element.css
+++ b/public/assets/route/admin/core/css/form-element.css
@@ -217,6 +217,32 @@ select~span.select2 * {
     font-size: .875rem;
 }
 
+select.custom-select~.select2 .select2-selection__arrow {
+    display: flex;
+    height: 50%;
+    width: 40px;
+    top: 4px;
+    right: 7px;
+}
+
+select.custom-select~.select2>.selection>.select2-selection {
+    padding-top: 5px;
+    height: 60px;
+}
+
+select.custom-select.is-invalid~.select2::after {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+    position: absolute;
+    right: calc(1rem + 4px);
+    top: calc(50% + 2px);
+    content: '';
+    width: calc(0.75em + 0.375rem);
+    height: calc(0.75em + 0.375rem);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+}
+
 span.selection {
     width: 100%;
 }
@@ -369,6 +395,10 @@ select[disabled]~.select2-container--default .select2-selection--single {
     color: #fff;
 }
 
+.select2-results .select2-results__option--highlighted .badge-primary {
+    color: var(--primary);
+}
+
 .select2-results ul {
     background-color: var(--primary);
 }
@@ -455,7 +485,7 @@ span+select~.select2.select2-container .select2-selection.select2-selection--mul
     opacity: .5;
 }
 
-span+select.custom-select~.select2-container--default .select2-selection--multiple:before {
+span+select.custom-select[multiple]~.select2-container--default .selection:before {
     content: ' ';
     display: block;
     position: absolute;
@@ -469,9 +499,10 @@ span+select.custom-select~.select2-container--default .select2-selection--multip
     top: 25%;
     width: 0;
     cursor: pointer;
+    z-index: 1;
 }
 
-span+select.custom-select~.select2-container--open .select2-selection--multiple:before {
+span+select.custom-select[multiple]~.select2-container--open .selection:before {
     content: ' ';
     display: block;
     position: absolute;
